src/objects/SpringCMEos__SpringCM_Auth_Provider__mdt.object
<CustomObject>
    <fields>
        <fullName>SpringCMEos__Client_Id__c</fullName>
        <label>Client Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SpringCMEos__Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpringCMEos__Redirect_Url__c</fullName>
        <label>Redirect Url</label>
        <type>Url</type>
    </fields>
    <label>SpringCM Auth Provider</label>
    <pluralLabel>SpringCM Auth Provider</pluralLabel>
</CustomObject>